--- a/public/css/additional.css
+++ b/public/css/additional.css
@@ -489,3 +489,26 @@ a.desc:after {
 .document_table table thead tr th.message-icon a:hover {
     border-bottom: 1px solid #000;
 }
+
+#user-notifications {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+}
+
+#user-notifications .progress {
+    height: 7px;
+    margin: 5px 0 0 0;
+    width: 280px;
+    max-width: 90vw;
+    background-color: rgba(255, 255, 255, 0);
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
+#user-notifications .alert {
+margin-bottom: 5px;
+width: 300px;
+max-width: 90vw;
+padding: 10px;
+}
