--- a/public/css/additional.css
+++ b/public/css/additional.css
@@ -104,7 +104,7 @@
     margin-top: 25px;
     float: right;
     height: 34px;
-    width: 150px;
+    width: 160px;
 }
 
 .correspondence .blue_link.disabled {
@@ -554,8 +554,53 @@ a.desc:after {
     right: 45%
 }
 
+div.correspondence_list {
+    height: 400px;
+    overflow-y: scroll;
+    border: 1px solid #d1d1d1;
+    margin-bottom: 15px;
+    padding: 5px;
+}
+
+.correspondence_list > div {
+    position: relative;
+    list-style: none;
+    font-family: "Montserrat-Medium";
+    font-size: 14px !important;
+    color: #5e5e5e;
+    margin-bottom: 25px;
+}
+
+.correspondence_list > div textarea {
+    display: block;
+    width: 100%;
+    outline: none;
+    border: 1px solid #d8d8d8;
+    border-radius: 5px;
+    padding: 12px 15px;
+    margin: 0 0 0 auto;
+}
+
 .auth-needed-to-comment {
     margin-bottom: 60px;
     font-size: 20px;
     text-align: center;
+}
+
+div.correspondence_list::-webkit-scrollbar {
+    background-color: #cacaca;
+}
+
+div.correspondence_list::-webkit-scrollbar:vertical {
+    width: 5px
+}
+
+div.correspondence_list::-webkit-scrollbar:horizontal {
+    width: 5px
+}
+
+div.correspondence_list::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+    background-color: #3da846;
 }
